src/compiler/snapshots/isa__compiler__parser__tests__matches-3.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"match [10] with [] -> match [] with _ -> 10,, [a]b -> a+b\").parse_expr()"
---
Ok(
    Expr {
        kind: Match {
            expr: Expr {
                kind: List(
                    [
                        Expr {
                            kind: Int(
                                10,
                            ),
                            span: SpanData { file_id: 0, start: 7, end: 9 },
                            ty: (),
                        },
                    ],
                ),
                span: SpanData { file_id: 0, start: 6, end: 10 },
                ty: (),
            },
            arms: [
                MatchArm {
                    pat: Pat {
                        kind: List(
                            Nil,
                        ),
                        span: SpanData { file_id: 0, start: 16, end: 18 },
                        ty: (),
                    },
                    expr: Expr {
                        kind: Match {
                            expr: Expr {
                                kind: List(
                                    [],
                                ),
                                span: SpanData { file_id: 0, start: 28, end: 30 },
                                ty: (),
                            },
                            arms: [
                                MatchArm {
                                    pat: Pat {
                                        kind: Wild,
                                        span: SpanData { file_id: 0, start: 36, end: 37 },
                                        ty: (),
                                    },
                                    expr: Expr {
                                        kind: Int(
                                            10,
                                        ),
                                        span: SpanData { file_id: 0, start: 41, end: 43 },
                                        ty: (),
                                    },
                                },
                            ],
                        },
                        span: SpanData { file_id: 0, start: 22, end: 44 },
                        ty: (),
                    },
                },
                MatchArm {
                    pat: Pat {
                        kind: List(
                            Cons(
                                Pat {
                                    kind: Constructor {
                                        name: Path {
                                            segments: [
                                                Ident {
                                                    ident: "a",
                                                    span: SpanData { file_id: 0, start: 47, end: 48 },
                                                },
                                            ],
                                            ..
                                        },
                                        args: [],
                                    },
                                    span: SpanData { file_id: 0, start: 47, end: 48 },
                                    ty: (),
                                },
                                Pat {
                                    kind: Constructor {
                                        name: Path {
                                            segments: [
                                                Ident {
                                                    ident: "b",
                                                    span: SpanData { file_id: 0, start: 49, end: 50 },
                                                },
                                            ],
                                            ..
                                        },
                                        args: [],
                                    },
                                    span: SpanData { file_id: 0, start: 49, end: 50 },
                                    ty: (),
                                },
                            ),
                        ),
                        span: SpanData { file_id: 0, start: 46, end: 50 },
                        ty: (),
                    },
                    expr: Expr {
                        kind: Infix {
                            op: Ident {
                                ident: "+",
                                span: SpanData { file_id: 0, start: 55, end: 56 },
                            },
                            lhs: Expr {
                                kind: Path(
                                    Path {
                                        segments: [
                                            Ident {
                                                ident: "a",
                                                span: SpanData { file_id: 0, start: 54, end: 55 },
                                            },
                                        ],
                                        ..
                                    },
                                ),
                                span: SpanData { file_id: 0, start: 54, end: 55 },
                                ty: (),
                            },
                            rhs: Expr {
                                kind: Path(
                                    Path {
                                        segments: [
                                            Ident {
                                                ident: "b",
                                                span: SpanData { file_id: 0, start: 56, end: 57 },
                                            },
                                        ],
                                        ..
                                    },
                                ),
                                span: SpanData { file_id: 0, start: 56, end: 57 },
                                ty: (),
                            },
                        },
                        span: SpanData { file_id: 0, start: 54, end: 57 },
                        ty: (),
                    },
                },
            ],
        },
        span: SpanData { file_id: 0, start: 0, end: 57 },
        ty: (),
    },
)
