src/compiler/snapshots/isa__compiler__parser__tests__paths-4.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"a::b::c a::T\").parse_expr()"
---
Ok(
    Expr {
        kind: Call {
            callee: Expr {
                kind: Path(
                    Path {
                        segments: [
                            Ident {
                                ident: "a",
                                span: SpanData { file_id: 0, lo: 0, hi: 1 },
                            },
                            Ident {
                                ident: "b",
                                span: SpanData { file_id: 0, lo: 3, hi: 4 },
                            },
                            Ident {
                                ident: "c",
                                span: SpanData { file_id: 0, lo: 6, hi: 7 },
                            },
                        ],
                    },
                ),
                span: SpanData { file_id: 0, lo: 0, hi: 7 },
                ty: (),
            },
            arg: Expr {
                kind: Path(
                    Path {
                        segments: [
                            Ident {
                                ident: "a",
                                span: SpanData { file_id: 0, lo: 8, hi: 9 },
                            },
                            Ident {
                                ident: "T",
                                span: SpanData { file_id: 0, lo: 11, hi: 12 },
                            },
                        ],
                    },
                ),
                span: SpanData { file_id: 0, lo: 8, hi: 12 },
                ty: (),
            },
        },
        span: SpanData { file_id: 0, lo: 0, hi: 12 },
        ty: (),
    },
)
