src/compiler/snapshots/isa__compiler__parser__tests__paths-5.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"a::b::c C::a::T b\").parse_expr()"
---
Ok(
    Expr {
        kind: Call {
            callee: Expr {
                kind: Call {
                    callee: Expr {
                        kind: Path(
                            Path {
                                segments: [
                                    Ident {
                                        ident: "a",
                                        span: SpanData { file_id: 0, start: 0, end: 1 },
                                    },
                                    Ident {
                                        ident: "b",
                                        span: SpanData { file_id: 0, start: 3, end: 4 },
                                    },
                                    Ident {
                                        ident: "c",
                                        span: SpanData { file_id: 0, start: 6, end: 7 },
                                    },
                                ],
                                ..
                            },
                        ),
                        span: SpanData { file_id: 0, start: 0, end: 7 },
                        ty: (),
                    },
                    arg: Expr {
                        kind: Path(
                            Path {
                                segments: [
                                    Ident {
                                        ident: "C",
                                        span: SpanData { file_id: 0, start: 8, end: 9 },
                                    },
                                    Ident {
                                        ident: "a",
                                        span: SpanData { file_id: 0, start: 11, end: 12 },
                                    },
                                    Ident {
                                        ident: "T",
                                        span: SpanData { file_id: 0, start: 14, end: 15 },
                                    },
                                ],
                                ..
                            },
                        ),
                        span: SpanData { file_id: 0, start: 8, end: 15 },
                        ty: (),
                    },
                },
                span: SpanData { file_id: 0, start: 0, end: 15 },
                ty: (),
            },
            arg: Expr {
                kind: Path(
                    Path {
                        segments: [
                            Ident {
                                ident: "b",
                                span: SpanData { file_id: 0, start: 16, end: 17 },
                            },
                        ],
                        ..
                    },
                ),
                span: SpanData { file_id: 0, start: 16, end: 17 },
                ty: (),
            },
        },
        span: SpanData { file_id: 0, start: 0, end: 17 },
        ty: (),
    },
)
