src/compiler/snapshots/isa__compiler__parser__tests__paths.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"a::b\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "a",
                        span: SpanData { file_id: 0, lo: 0, hi: 1 },
                    },
                    Ident {
                        ident: "b",
                        span: SpanData { file_id: 0, lo: 3, hi: 4 },
                    },
                ],
            },
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 4 },
        ty: (),
    },
)
