src/compiler/snapshots/isa__compiler__parser__tests__prefix-2.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"(!false)\").parse_expr()"
---
Ok(
    Expr {
        kind: Paren(
            Expr {
                kind: Prefix {
                    op: Ident {
                        ident: "!",
                        span: SpanData { file_id: 0, start: 0, end: 1 },
                    },
                    expr: Expr {
                        kind: Bool(
                            false,
                        ),
                        span: SpanData { file_id: 0, start: 2, end: 7 },
                        ty: (),
                    },
                },
                span: SpanData { file_id: 0, start: 0, end: 7 },
                ty: (),
            },
        ),
        span: SpanData { file_id: 0, start: 0, end: 8 },
        ty: (),
    },
)
