src/compiler/snapshots/isa__compiler__parser__tests__prefix-3.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"-a\").parse_expr()"
---
Ok(
    Expr {
        kind: Prefix {
            op: Ident {
                ident: "-",
                span: SpanData { file_id: 0, lo: 0, hi: 1 },
            },
            expr: Expr {
                kind: Path(
                    Path {
                        segments: [
                            Ident {
                                ident: "a",
                                span: SpanData { file_id: 0, lo: 1, hi: 2 },
                            },
                        ],
                    },
                ),
                span: SpanData { file_id: 0, lo: 1, hi: 2 },
                ty: (),
            },
        },
        span: SpanData { file_id: 0, lo: 0, hi: 2 },
        ty: (),
    },
)
