src/compiler/snapshots/isa__compiler__parser__tests__prefix-5.snap
---
source: src/compiler/parser.rs
expression: "create_parser(r#\"- - - - - - - + - + 1\"#).parse_expr()"
---
Ok(
    Expr {
        kind: Prefix {
            op: Ident {
                ident: "-",
                span: SpanData { file_id: 0, start: 0, end: 1 },
            },
            expr: Expr {
                kind: Prefix {
                    op: Ident {
                        ident: "-",
                        span: SpanData { file_id: 0, start: 2, end: 3 },
                    },
                    expr: Expr {
                        kind: Prefix {
                            op: Ident {
                                ident: "-",
                                span: SpanData { file_id: 0, start: 4, end: 5 },
                            },
                            expr: Expr {
                                kind: Prefix {
                                    op: Ident {
                                        ident: "-",
                                        span: SpanData { file_id: 0, start: 6, end: 7 },
                                    },
                                    expr: Expr {
                                        kind: Prefix {
                                            op: Ident {
                                                ident: "-",
                                                span: SpanData { file_id: 0, start: 8, end: 9 },
                                            },
                                            expr: Expr {
                                                kind: Prefix {
                                                    op: Ident {
                                                        ident: "-",
                                                        span: SpanData { file_id: 0, start: 10, end: 11 },
                                                    },
                                                    expr: Expr {
                                                        kind: Prefix {
                                                            op: Ident {
                                                                ident: "-",
                                                                span: SpanData { file_id: 0, start: 12, end: 13 },
                                                            },
                                                            expr: Expr {
                                                                kind: Prefix {
                                                                    op: Ident {
                                                                        ident: "+",
                                                                        span: SpanData { file_id: 0, start: 14, end: 15 },
                                                                    },
                                                                    expr: Expr {
                                                                        kind: Prefix {
                                                                            op: Ident {
                                                                                ident: "-",
                                                                                span: SpanData { file_id: 0, start: 16, end: 17 },
                                                                            },
                                                                            expr: Expr {
                                                                                kind: Prefix {
                                                                                    op: Ident {
                                                                                        ident: "+",
                                                                                        span: SpanData { file_id: 0, start: 18, end: 19 },
                                                                                    },
                                                                                    expr: Expr {
                                                                                        kind: Int(
                                                                                            1,
                                                                                        ),
                                                                                        span: SpanData { file_id: 0, start: 20, end: 21 },
                                                                                        ty: (),
                                                                                    },
                                                                                },
                                                                                span: SpanData { file_id: 0, start: 18, end: 21 },
                                                                                ty: (),
                                                                            },
                                                                        },
                                                                        span: SpanData { file_id: 0, start: 16, end: 21 },
                                                                        ty: (),
                                                                    },
                                                                },
                                                                span: SpanData { file_id: 0, start: 14, end: 21 },
                                                                ty: (),
                                                            },
                                                        },
                                                        span: SpanData { file_id: 0, start: 12, end: 21 },
                                                        ty: (),
                                                    },
                                                },
                                                span: SpanData { file_id: 0, start: 10, end: 21 },
                                                ty: (),
                                            },
                                        },
                                        span: SpanData { file_id: 0, start: 8, end: 21 },
                                        ty: (),
                                    },
                                },
                                span: SpanData { file_id: 0, start: 6, end: 21 },
                                ty: (),
                            },
                        },
                        span: SpanData { file_id: 0, start: 4, end: 21 },
                        ty: (),
                    },
                },
                span: SpanData { file_id: 0, start: 2, end: 21 },
                ty: (),
            },
        },
        span: SpanData { file_id: 0, start: 0, end: 21 },
        ty: (),
    },
)
