src/compiler/snapshots/isa__compiler__parser__tests__prefix.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"-1\").parse_expr()"
---
Ok(
    Expr {
        kind: Prefix {
            op: Ident {
                ident: "-",
                span: SpanData { file_id: 0, start: 0, end: 1 },
            },
            expr: Expr {
                kind: Int(
                    1,
                ),
                span: SpanData { file_id: 0, start: 1, end: 2 },
                ty: (),
            },
        },
        span: SpanData { file_id: 0, start: 0, end: 2 },
        ty: (),
    },
)
